counsellor rating